Update Jul 23rd

--- a/src/main/resources/pages/leadz/watches/men/Men-4.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-4.html
@@ -23,17 +23,28 @@
 
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
-        <img src="../../../assets/watches/1/watch%201%20-%201.webp" alt="Watch 1" class="active" />
-        <img src="../../../assets/watches/1/watch%201%20-%208.webp" alt="Watch 2" />
-        <img src="../../../assets/watches/1/watch%201%20-%209.webp" alt="Watch 3" />
-        <img src="../../../assets/watches/1/watch%201%20-%2010.webp" alt="Watch 4" />
-        <img src="../../../assets/watches/1/watch%201%20-%2011.webp" alt="Watch 5" />
+        <img src="../../../../assets/leadz/watches/men/4/M4-18.jpg" alt="Watch 4" class="active" />
+        <img src="../../../../assets/leadz/watches/men/4/M4-4.jpg" alt="Watch 4" />
+        <img src="../../../../assets/leadz/watches/men/4/M4-10.jpg" alt="Watch 4" />
+        <img src="../../../../assets/leadz/watches/men/4/M4-14.jpg" alt="Watch 4" />
+        <img src="../../../../assets/leadz/watches/men/4/M4-7.jpg" alt="Watch 4" />
+        <img src="../../../../assets/leadz/watches/men/4/M4-16.jpg" alt="Watch 4" />
+        <img src="../../../../assets/leadz/watches/men/4/M4-2.jpg" alt="Watch 4" />
+        <img src="../../../../assets/leadz/watches/men/4/M4-12.jpg" alt="Watch 4" />
+        <img src="../../../../assets/leadz/watches/men/4/M4-17.jpg" alt="Watch 4" />
+        <img src="../../../../assets/leadz/watches/men/4/M4-6.jpg" alt="Watch 4" />
+        <img src="../../../../assets/leadz/watches/men/4/M4-5.jpg" alt="Watch 4" />
+        <img src="../../../../assets/leadz/watches/men/4/M4-11.jpg" alt="Watch 4" />
+        <img src="../../../../assets/leadz/watches/men/4/M4-8.jpg" alt="Watch 4" />
+        <img src="../../../../assets/leadz/watches/men/4/M4-15.jpg" alt="Watch 4" />
+        <img src="../../../../assets/leadz/watches/men/4/M4-3.jpg" alt="Watch 4" />
+        <img src="../../../../assets/leadz/watches/Baisheng/Baisheng-Label.jpg" alt="Watch 4" />
     </div>
 
     <!-- Main Image with Arrows -->
     <div>
         <div style="position: relative;">
-            <img id="mainImage" src="../../../assets/watches/1/watch%201%20-%201.webp" alt="Main Watch" class="main-image" />
+            <img id="mainImage" src="../../../../assets/leadz/watches/men/4/M4-18.jpg" alt="Main Watch" class="main-image" />
             <button id="prevBtn" class="arrow-btn left">‹</button>
             <button id="nextBtn" class="arrow-btn right">›</button>
 
@@ -58,15 +69,15 @@
         <!-- Color Options with Price -->
         <div class="colors" id="colors">
             <div class="color-option selected" data-price="3,000" data-original="3750.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/4/M4-9.jpg" alt="Watch" />
                 <div class="color-label">Silver-Green</div>
             </div>
             <div class="color-option" data-price="3,000" data-original="3750.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/4/M4-1.jpg" alt="Watch" />
                 <div class="color-label">Silver-Brown</div>
             </div>
             <div class="color-option" data-price="3,000" data-original="3750.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/4/M4-13.jpg" alt="Watch" />
                 <div class="color-label">Silver-White</div>
             </div>
         </div>
