--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -157,7 +157,7 @@
   <!--MEN 4-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-4.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/4/M4-18.jpg" alt="Mens Watch">
       <h4>BAISHENG</h4>
       <div class="price">
         <span class="currency">LKR</span>
