--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -131,7 +131,7 @@
   <!--MEN 2-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-2.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/2/M2-7.jpg" alt="Mens Watch">
       <h4>Titan</h4>
       <div class="price">
         <span class="currency">LKR</span>
