--- a/src/main/resources/pages/leadz/watches/men/Men-2.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-2.html
@@ -23,17 +23,21 @@
 
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
-        <img src="../../../assets/watches/1/watch%201%20-%201.webp" alt="Watch 1" class="active" />
-        <img src="../../../assets/watches/1/watch%201%20-%208.webp" alt="Watch 2" />
-        <img src="../../../assets/watches/1/watch%201%20-%209.webp" alt="Watch 3" />
-        <img src="../../../assets/watches/1/watch%201%20-%2010.webp" alt="Watch 4" />
-        <img src="../../../assets/watches/1/watch%201%20-%2011.webp" alt="Watch 5" />
+        <img src="../../../../assets/leadz/watches/men/2/M2-7.jpg" alt="Watch 2" class="active" />
+        <img src="../../../../assets/leadz/watches/men/2/M2-3.jpg" alt="Watch 2" />
+        <img src="../../../../assets/leadz/watches/men/2/M2-5.jpg" alt="Watch 2" />
+        <img src="../../../../assets/leadz/watches/men/2/M2-2.jpg" alt="Watch 2" />
+        <img src="../../../../assets/leadz/watches/men/2/M2-4.jpg" alt="Watch 2" />
+        <img src="../../../../assets/leadz/watches/men/2/M2-6.jpg" alt="Watch 2" />
+        <img src="../../../../assets/leadz/watches/men/2/M2-8.jpg" alt="Watch 2" />
+        <img src="../../../../assets/leadz/watches/men/2/M2-1.jpg" alt="Watch 2" />
+        <img src="../../../../assets/leadz/watches/men/2/M2-9.jpg" alt="Watch 2" />
     </div>
 
     <!-- Main Image with Arrows -->
     <div>
         <div style="position: relative;">
-            <img id="mainImage" src="../../../assets/watches/1/watch%201%20-%201.webp" alt="Main Watch" class="main-image" />
+            <img id="mainImage" src="../../../../assets/leadz/watches/men/2/M2-7.jpg" alt="Main Watch" class="main-image" />
             <button id="prevBtn" class="arrow-btn left">‹</button>
             <button id="nextBtn" class="arrow-btn right">›</button>
 
@@ -58,11 +62,11 @@
         <!-- Color Options with Price -->
         <div class="colors" id="colors">
             <div class="color-option selected" data-price="1,500" data-original="2500.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/2/M2-9.jpg" alt="Watch 2" />
                 <div class="color-label">Blue</div>
             </div>
             <div class="color-option" data-price="1,500" data-original="2500.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/2/M2-8.jpg" alt="Watch 2" />
                 <div class="color-label">Brown</div>
             </div>
         </div>
