--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -183,7 +183,7 @@
   <!--MEN 5-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-5.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/5/M5-2.jpg" alt="Mens Watch">
       <h4>BAISHENG</h4>
       <div class="price">
         <span class="currency">LKR</span>
