--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -196,7 +196,7 @@
   <!--MEN 6-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-6.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/6/M6-4.jpg" alt="Mens Watch">
       <h4>BAISHENG</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -222,7 +222,7 @@
   <!--MEN 8-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-8.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/8/M8-2.jpg" alt="Mens Watch">
       <h4>BAISHENG</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -235,7 +235,7 @@
   <!--MEN 9-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-9.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/9/M9-1.jpg" alt="Mens Watch">
       <h4>BAISHENG</h4>
       <div class="price">
         <span class="currency">LKR</span>
