--- a/src/main/resources/pages/leadz/watches/men/Men-5.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-5.html
@@ -60,7 +60,7 @@
         <!-- Color Options with Price -->
         <div class="colors" id="colors">
             <div class="color-option selected" data-price="2,750" data-original="3500.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/5/M5-3.jpg" alt="Watch" />
                 <div class="color-label">Silver-Gold-Black</div>
             </div>
         </div>
