--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -248,7 +248,7 @@
   <!--MEN 10-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-10.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/10/M10-4.jpg" alt="Mens Watch">
       <h4>BAISHENG</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -261,7 +261,7 @@
   <!--MEN 11-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-11.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/11/M11-4.jpg" alt="Mens Watch">
       <h4>CASIO</h4>
       <div class="price">
         <span class="currency">LKR</span>
