--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -118,7 +118,7 @@
   <!--MEN 1-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-1.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/1/M1-5.jpg" alt="Mens Watch">
       <h4>CAITES</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -144,7 +144,20 @@
   <!--MEN 3-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-3.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/3/M3-4.jpg" alt="Mens Watch">
+      <h4>BAISHENG</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">2,500.00</span>
+        <span class="original">3,350.00</span>
+      </div>
+    </div>
+  </a>
+
+  <!--MEN 19-->
+  <a href="src/main/resources/pages/leadz/watches/men/Men-19.html?id=1" class="card-link">
+    <div class="card">
+      <img src="src/main/resources/assets/leadz/watches/men/19/M19-4.jpg" alt="Mens Watch">
       <h4>BAISHENG</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -209,7 +222,7 @@
   <!--MEN 7-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-7.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/7/M7-4.jpg" alt="Mens Watch">
       <h4>BAISHENG</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -274,7 +287,7 @@
   <!--WOMEN 2-->
   <a href="src/main/resources/pages/leadz/watches/women/Women-2.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Womens Watch">
+      <img src="src/main/resources/assets/leadz/watches/women/2/W2-2.jpg" alt="Womens Watch">
       <h4>BAISHENG</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -287,7 +300,7 @@
   <!--WOMEN 3-->
   <a href="src/main/resources/pages/leadz/watches/women/Women-3.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Womens Watch">
+      <img src="src/main/resources/assets/leadz/watches/women/3/W3-2.jpg" alt="Womens Watch">
       <h4>HERYI</h4>
       <div class="price">
         <span class="currency">LKR</span>
