--- a/src/main/resources/pages/leadz/watches/men/Men-19.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-19.html
@@ -17,23 +17,25 @@
 <a href="javascript:history.back()" class="back-button" aria-label="Go back">
     <img src="../../../../assets/imgs/back.png" alt="Back" />
 </a>
-<div class="product-id">ID: WM1400</div>
+<div class="product-id">ID: WM1427</div>
 
 <div class="container">
 
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
-        <img src="../../../../assets/leadz/watches/men/1/M1-5.jpg" alt="Watch 1" class="active" />
-        <img src="../../../../assets/leadz/watches/men/1/M1-2.jpg" alt="Watch 1" />
-        <img src="../../../../assets/leadz/watches/men/1/M1-3.jpg" alt="Watch 1" />
-        <img src="../../../../assets/leadz/watches/men/1/M1-4.jpg" alt="Watch 1" />
-        <img src="../../../../assets/leadz/watches/men/1/M1-1.jpg" alt="Watch 1" />
+        <img src="../../../../assets/leadz/watches/men/19/M19-4.jpg" alt="Watch 19" class="active" />
+        <img src="../../../../assets/leadz/watches/men/19/M19-1.jpg" alt="Watch 19" />
+        <img src="../../../../assets/leadz/watches/men/19/M19-2.jpg" alt="Watch 19" />
+        <img src="../../../../assets/leadz/watches/men/19/M19-3.jpg" alt="Watch 19" />
+        <img src="../../../../assets/leadz/watches/men/19/M19-5.jpg" alt="Watch 19" />
+        <img src="../../../../assets/leadz/watches/Baisheng/Baisheng-Label.jpg" alt="Watch 19" />
+
     </div>
 
     <!-- Main Image with Arrows -->
     <div>
         <div style="position: relative;">
-            <img id="mainImage" src="../../../../assets/leadz/watches/men/1/M1-5.jpg" alt="Main Watch" class="main-image" />
+            <img id="mainImage" src="../../../../assets/leadz/watches/men/19/M19-4.jpg" alt="Main Watch" class="main-image" />
             <button id="prevBtn" class="arrow-btn left">‹</button>
             <button id="nextBtn" class="arrow-btn right">›</button>
 
@@ -42,28 +44,24 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">CAITES</h1>
+        <h1 class="title">BAISHENG</h1>
 
         <div class="price-section">
-            <div id="price">LKR 1,200.00</div>
-            <div class="original-price" id="originalPrice">LKR 2,350.00</div>
+            <div id="price">LKR 2,500.00</div>
+            <div class="original-price" id="originalPrice">LKR 3,350.00</div>
         </div>
 
         <p class="description">
-            CAITES
+            BAISHENG
         </p>
 
-        <div class="brand-label">Brand: CAITES</div>
+        <div class="brand-label">Brand: BAISHENG</div>
 
         <!-- Color Options with Price -->
         <div class="colors" id="colors">
-            <div class="color-option selected" data-price="1,200" data-original="2350.00">
-                <img src="../../../../assets/leadz/watches/men/1/M1-3.jpg" alt="Watch" />
-                <div class="color-label">Brown</div>
-            </div>
-            <div class="color-option" data-price="1,200" data-original="2350.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
-                <div class="color-label">Black</div>
+            <div class="color-option" data-price="2,500" data-original="3350.00">
+                <img src="../../../../assets/leadz/watches/men/19/M19-3.jpg" alt="Watch" />
+                <div class="color-label">Silver</div>
             </div>
         </div>
 
