--- a/src/main/resources/pages/leadz/watches/men/Men-3.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-3.html
@@ -23,17 +23,19 @@
 
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
-        <img src="../../../assets/watches/1/watch%201%20-%201.webp" alt="Watch 1" class="active" />
-        <img src="../../../assets/watches/1/watch%201%20-%208.webp" alt="Watch 2" />
-        <img src="../../../assets/watches/1/watch%201%20-%209.webp" alt="Watch 3" />
-        <img src="../../../assets/watches/1/watch%201%20-%2010.webp" alt="Watch 4" />
-        <img src="../../../assets/watches/1/watch%201%20-%2011.webp" alt="Watch 5" />
+        <img src="../../../../assets/leadz/watches/men/3/M3-4.jpg" alt="Watch 3" class="active" />
+        <img src="../../../../assets/leadz/watches/men/3/M3-1.jpg" alt="Watch 3" />
+        <img src="../../../../assets/leadz/watches/men/3/M3-5.jpg" alt="Watch 3" />
+        <img src="../../../../assets/leadz/watches/men/3/M3-2.jpg" alt="Watch 3" />
+        <img src="../../../../assets/leadz/watches/men/3/M3-3.jpg" alt="Watch 3" />
+        <img src="../../../../assets/leadz/watches/Baisheng/Baisheng-Label.jpg" alt="Watch 3" />
+
     </div>
 
     <!-- Main Image with Arrows -->
     <div>
         <div style="position: relative;">
-            <img id="mainImage" src="../../../assets/watches/1/watch%201%20-%201.webp" alt="Main Watch" class="main-image" />
+            <img id="mainImage" src="../../../../assets/leadz/watches/men/3/M3-4.jpg" alt="Main Watch" class="main-image" />
             <button id="prevBtn" class="arrow-btn left">‹</button>
             <button id="nextBtn" class="arrow-btn right">›</button>
 
@@ -57,12 +59,8 @@
 
         <!-- Color Options with Price -->
         <div class="colors" id="colors">
-            <div class="color-option selected" data-price="2,500" data-original="3350.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
-                <div class="color-label">Silver</div>
-            </div>
             <div class="color-option" data-price="2,500" data-original="3350.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/3/M3-2.jpg" alt="Watch" />
                 <div class="color-label">Gold</div>
             </div>
         </div>
